IDEUI-51: add shadow, fix scrollbar in Chrome, set indicator's width.

--- a/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
+++ b/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
@@ -10,10 +10,13 @@
  *******************************************************************************/
 .info-panel {
     display: inline;
+    font-family: outputFontFamily;
     font-size: 11px;
     padding-top: 2px;
     padding-left: 10px;
     padding-right: 10px;
+    overflow: hidden;
+    white-space: nowrap;
     /*border-right: 1px solid #232323;*/
 }
 
